// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`example.js - babylon-verify 1`] = `
function f() {<LF>
  console.log("testing line endings");<LF>
}<LF>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
function f() {<CR>
  console.log("testing line endings");<CR>
}<CR>

`;

exports[`example.js - babylon-verify 2`] = `
function f() {<LF>
  console.log("testing line endings");<LF>
}<LF>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
function f() {<CRLF>
  console.log("testing line endings");<CRLF>
}<CRLF>

`;

exports[`example.js - babylon-verify 3`] = `
function f() {<LF>
  console.log("testing line endings");<LF>
}<LF>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
function f() {<LF>
  console.log("testing line endings");<LF>
}<LF>

`;
